// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Display/ListItem Dense 1`] = `
<li
  className="MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-padding css-6lnq02-MuiListItem-root"
  data-cy="list-item"
  disabled={false}
  onClick={[Function]}
  style={
    {
      "cursor": "default",
    }
  }
>
  <div
    className="MuiListItemText-root MuiListItemText-dense css-tlelie-MuiListItemText-root"
    data-cy="list-item-content"
  >
    John Doe
  </div>
</li>
`;

exports[`Storyshots Display/ListItem Icon 1`] = `
<li
  className="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1p823my-MuiListItem-root"
  data-cy="list-item"
  disabled={false}
  onClick={[Function]}
  style={
    {
      "cursor": "default",
    }
  }
>
  <div
    className="MuiListItemIcon-root css-cveggr-MuiListItemIcon-root"
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1wnp694-MuiSvgIcon-root"
      data-cy="list-item-icon"
      data-testid="AccountCircleIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 4c1.93 0 3.5 1.57 3.5 3.5S13.93 13 12 13s-3.5-1.57-3.5-3.5S10.07 6 12 6zm0 14c-2.03 0-4.43-.82-6.14-2.88C7.55 15.8 9.68 15 12 15s4.45.8 6.14 2.12C16.43 19.18 14.03 20 12 20z"
      />
    </svg>
  </div>
  <div
    className="MuiListItemText-root css-tlelie-MuiListItemText-root"
    data-cy="list-item-content"
  >
    John Doe
  </div>
</li>
`;

exports[`Storyshots Display/ListItem Icon Custom 1`] = `
<li
  className="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1p823my-MuiListItem-root"
  data-cy="list-item"
  disabled={false}
  onClick={[Function]}
  style={
    {
      "cursor": "default",
    }
  }
>
  <div
    className="MuiListItemIcon-root css-cveggr-MuiListItemIcon-root"
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1wnp694-MuiSvgIcon-root"
      data-cy="list-item-icon"
      data-testid="StyleIcon"
      focusable="false"
      style={
        {
          "height": 24,
          "width": 24,
        }
      }
      viewBox="0 0 24 24"
    >
      <path
        d="m2.53 19.65 1.34.56v-9.03l-2.43 5.86c-.41 1.02.08 2.19 1.09 2.61zm19.5-3.7L17.07 3.98c-.31-.75-1.04-1.21-1.81-1.23-.26 0-.53.04-.79.15L7.1 5.95c-.75.31-1.21 1.03-1.23 1.8-.01.27.04.54.15.8l4.96 11.97c.31.76 1.05 1.22 1.83 1.23.26 0 .52-.05.77-.15l7.36-3.05c1.02-.42 1.51-1.59 1.09-2.6zM7.88 8.75c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zm-2 11c0 1.1.9 2 2 2h1.45l-3.45-8.34v6.34z"
      />
    </svg>
  </div>
  <div
    className="MuiListItemText-root css-tlelie-MuiListItemText-root"
    data-cy="list-item-content"
  >
    John Doe
  </div>
</li>
`;

exports[`Storyshots Display/ListItem Icon Loading 1`] = `
<li
  className="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1p823my-MuiListItem-root"
  data-cy="list-item"
  disabled={false}
  onClick={[Function]}
  style={
    {
      "cursor": "default",
    }
  }
>
  <div
    className="MuiListItemIcon-root css-cveggr-MuiListItemIcon-root"
  >
    <span
      className="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-153n0d3-MuiSkeleton-root"
      style={
        {
          "height": 24,
          "width": 24,
        }
      }
    />
  </div>
  <div
    className="MuiListItemText-root css-tlelie-MuiListItemText-root"
    data-cy="list-item-content-loading"
  >
    <span
      className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1e1x4vv-MuiSkeleton-root"
      style={
        {
          "height": undefined,
          "width": undefined,
        }
      }
    />
  </div>
</li>
`;

exports[`Storyshots Display/ListItem Loading 1`] = `
<li
  className="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1p823my-MuiListItem-root"
  data-cy="list-item"
  disabled={false}
  onClick={[Function]}
  style={
    {
      "cursor": "default",
    }
  }
>
  <div
    className="MuiListItemText-root css-tlelie-MuiListItemText-root"
    data-cy="list-item-content-loading"
  >
    <span
      className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1e1x4vv-MuiSkeleton-root"
      style={
        {
          "height": undefined,
          "width": undefined,
        }
      }
    />
  </div>
</li>
`;

exports[`Storyshots Display/ListItem Primary 1`] = `
<li
  className="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1p823my-MuiListItem-root"
  data-cy="list-item"
  disabled={false}
  onClick={[Function]}
  style={
    {
      "cursor": "default",
    }
  }
>
  <div
    className="MuiListItemText-root css-tlelie-MuiListItemText-root"
    data-cy="list-item-content"
  >
    John Doe
  </div>
</li>
`;

exports[`Storyshots Display/ListItem Selected 1`] = `
<li
  className="MuiListItem-root MuiListItem-gutters MuiListItem-padding Mui-selected css-1p823my-MuiListItem-root"
  data-cy="list-item"
  disabled={false}
  onClick={[Function]}
  style={
    {
      "cursor": "default",
    }
  }
>
  <div
    className="MuiListItemText-root css-tlelie-MuiListItemText-root"
    data-cy="list-item-content"
  >
    John Doe
  </div>
</li>
`;
